--- a/public/html/signUpActivate.html
+++ b/public/html/signUpActivate.html
@@ -1,4 +1,7 @@
 <nav-bar></nav-bar>
+
+<div class="container fluid" style="margin-top:120px">
+
 <div class="col-sm-4"></div>
 
 <div class="col-sm-4">
@@ -27,3 +30,5 @@
 </div>
 
 <div class="col-sm-4"></div>
+
+</div>
