--- a/public/html/signUpInstruction.html
+++ b/public/html/signUpInstruction.html
@@ -1,4 +1,6 @@
 <nav-bar></nav-bar>
+
+<div class="container fluid" style="margin-top:120px">
 <div class="col-sm-2"></div>
 <div class="col-sm-8">
   <h1>The sign up instruction is sent to </h1>
@@ -12,5 +14,6 @@
 <!-- Indicates a successful or positive action -->
 
 <div class="col-sm-2"></div>
+</div>
 
 <!-- need to add sign up instruction controller if sent email fails -->
