--- a/public/html/dashboard.ad.html
+++ b/public/html/dashboard.ad.html
@@ -1,5 +1,7 @@
 <nav-bar-ad></nav-bar-ad>
 
+<second-nav-bar-ad></second-nav-bar-ad>
+
 <div class="row" style="margin-top:120px">
   <div class="col-sm-1"></div>
 
