--- a/public/html/index.html
+++ b/public/html/index.html
@@ -113,6 +113,9 @@
 
 <script type='text/javascript' src='suSecondNavBarMessage.service.js'> </script>
 
+<script type='text/javascript' src='secondNavBar.ad.controller.js'> </script>
+<script type='text/javascript' src='secondNavBar.ad.directive.js'> </script>
+
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
