add admin blue nav bar background color

--- a/public/html/navBar.ad.html
+++ b/public/html/navBar.ad.html
@@ -1,5 +1,5 @@
 <div ng-controller='navBarAdController'>
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav id="ad_nav_bar" class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
 
