auto scroll bottom

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -116,6 +116,8 @@
 <script type='text/javascript' src='secondNavBar.ad.controller.js'> </script>
 <script type='text/javascript' src='secondNavBar.ad.directive.js'> </script>
 
+<script type='text/javascript' src="ng-scroll-glue.js"></script>
+
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
