--- a/public/html/secondNavBar.ad.html
+++ b/public/html/secondNavBar.ad.html
@@ -18,15 +18,15 @@
     <!-- chat panel -->
     <div class="panel panel-default" id='chatPanel' ng-show='showChatPanel'>
       <div class="panel-heading">Chat panel</div>
-      <div class="panel-body" id='chatPanelBody'>
+      <div class="panel-body" id='chatPanelBody' scroll-glue>
         <table class="table table-striped">
-          <tr ng-repeat='m in sentMessage'>
+          <tr ng-repeat='m in sentMessage track by $index'>
             <td class="break-word">{{m}}</td>
           </tr>
         </table>
       </div>
       <form id="chatPanel-message" ng-submit='sendMessage()'>
-        <input type='text' ng-model='message' size='38' autofocus></input>
+        <input id="chatPanel-message-input" type='text' ng-model='message' size='38' autofocus></input>
         <!-- <button type='submit' class='btn btn-success'>Send</button> -->
       </form>
     </div>
