--- a/public/html/secondNavBar.su.html
+++ b/public/html/secondNavBar.su.html
@@ -1,6 +1,5 @@
   <div ng-controller='secondNavBarSuCtrl'>
     <div class="navbar navbar-default navbar-fixed-top second-navbar" id="su-2nd-nav-bar">
-        <!-- <p class="navbar-text">สวัสดี {{userName}} เรามาดู Dashboard กัน</p> -->
         <p class="navbar-text">{{suSecondNavBarMessage}}</p>
 
         <ul class="nav navbar-nav pull-right">
@@ -18,15 +17,15 @@
     <!-- chat panel -->
     <div class="panel panel-default" id='chatPanel' ng-show='showChatPanel'>
       <div class="panel-heading">Chat panel</div>
-      <div class="panel-body" id='chatPanelBody'>
+      <div class="panel-body" id='chatPanelBody' scroll-glue>
         <table class="table table-striped">
-          <tr ng-repeat='m in sentMessage'>
+          <tr ng-repeat='m in sentMessage track by $index'>
             <td class="break-word">{{m}}</td>
           </tr>
         </table>
       </div>
       <form id="chatPanel-message" ng-submit='sendMessage()'>
-        <input type='text' ng-model='message' size='38' autofocus></input>
+        <input id="chatPanel-message-input" type='text' ng-model='message' size='38' autofocus></input>
         <!-- <button type='submit' class='btn btn-success'>Send</button> -->
       </form>
     </div>
