--- a/public/html/secondNavBar.su.html
+++ b/public/html/secondNavBar.su.html
@@ -12,16 +12,23 @@
       <div class="panel panel-primary" id='notePanel' ng-show='showNotePanel'>
           <div class="panel-heading">
             <div class="panel-title pull-left">
-            Quick note
+              Quick note
+            </div>
+            <div class="panel-title pull-right">
+              <img src="image/close.png" style="width:20px;height:20px;border:0;">
             </div>
             <div class="clearfix"></div>
           </div>
           <div class="panel-body"><form>
             <div class="form-group">
-              <input id='quickNoteTitle' type='text' ng-model='quickNoteTitle' size='40' autofocus></input>
+              <input id='quickNoteTitle' type='text'
+                ng-model='quickNoteTitle'
+                size='40' placeholder=' Note title' autofocus>
+              </input>
             </div>
         <div class="form-group">
-            <textarea class="form-control" rows='10' column='50' id='note'></textarea>
+            <textarea class="form-control" rows='10' column='50' id='note'>
+            </textarea>
         </div>
           </form>
         </div>
@@ -32,6 +39,9 @@
     <div class="panel panel-primary" id='chatPanel' ng-show='showChatPanel'>
       <div class="panel-heading">
         <div class="panel-title pull-left">Chat panel</div>
+        <div class="panel-title pull-right">
+          <img src="image/close.png" style="width:20px;height:20px;border:0;">
+        </div>
         <div class="clearfix"></div>
       </div>
       <div class="panel-body" id='chatPanelBody' scroll-glue>
@@ -42,7 +52,9 @@
         </table>
       </div>
       <form id="chatPanel-message" ng-submit='sendMessage()'>
-        <input id="chatPanel-message-input" type='text' ng-model='message' size='38' autofocus></input>
+        <input id="chatPanel-message-input" type='text' ng-model='message' size='38'
+                placeholder=' Type message here ...' autofocus>
+        </input>
         <!-- <button type='submit' class='btn btn-success'>Send</button> -->
       </form>
     </div>
