add glymp + and close icon

--- a/public/html/secondNavBar.su.html
+++ b/public/html/secondNavBar.su.html
@@ -15,7 +15,9 @@
               Quick note
             </div>
             <div class="panel-title pull-right">
-              <img src="image/close.png" style="width:20px;height:20px;border:0;">
+              <span class="glyphicon glyphicon-plus"></span>
+              <span class="glyphicon glyphicon-remove"></span>
+              <!--img src="image/close.png" style="width:20px;height:20px;border:0;"-->
             </div>
             <div class="clearfix"></div>
           </div>
@@ -23,7 +25,7 @@
             <div class="form-group">
               <input id='quickNoteTitle' type='text'
                 ng-model='quickNoteTitle'
-                size='40' placeholder=' Note title' autofocus>
+                size='35' placeholder=' Note title' autofocus>
               </input>
             </div>
         <div class="form-group">
@@ -40,7 +42,7 @@
       <div class="panel-heading">
         <div class="panel-title pull-left">Chat panel</div>
         <div class="panel-title pull-right">
-          <img src="image/close.png" style="width:20px;height:20px;border:0;">
+          <span class="glyphicon glyphicon-remove"></span>
         </div>
         <div class="clearfix"></div>
       </div>
