implement close function for note and chat panel icon

--- a/public/html/secondNavBar.su.html
+++ b/public/html/secondNavBar.su.html
@@ -15,8 +15,8 @@
               Quick note
             </div>
             <div class="panel-title pull-right">
-              <a href='' ng-click=''><span class="glyphicon glyphicon-plus"></span></a>
-              <a href='' ng-click=''><span class="glyphicon glyphicon-remove"></span></a>
+              <a href='' ng-click='newNote()'><span class="glyphicon glyphicon-plus"></span></a>
+              <a href='' ng-click='openNotePanel()'><span class="glyphicon glyphicon-remove"></span></a>
               <!--img src="image/close.png" style="width:20px;height:20px;border:0;"-->
             </div>
             <div class="clearfix"></div>
@@ -41,7 +41,7 @@
       <div class="panel-heading">
         <div class="panel-title pull-left">Chat panel</div>
         <div class="panel-title pull-right">
-          <a href='' ng-click=''><span class="glyphicon glyphicon-remove"></span></a>
+          <a href='' ng-click='openChatPanel()'><span class="glyphicon glyphicon-remove"></span></a>
         </div>
         <div class="clearfix"></div>
       </div>
