--- a/public/html/index.html
+++ b/public/html/index.html
@@ -118,6 +118,9 @@
 
 <script type='text/javascript' src="ng-scroll-glue.js"></script>
 
+<script type='text/javascript' src='notePanel.controller.js'> </script>
+<script type='text/javascript' src='notePanel.directive.js'> </script>
+
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
