implement note panel as $rootScope to show when routing to other views

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -120,6 +120,8 @@
 
 <script type='text/javascript' src='notePanel.controller.js'> </script>
 <script type='text/javascript' src='notePanel.directive.js'> </script>
+<script type='text/javascript' src='notePanel.service.js'> </script>
+
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
