use app.run to initialize not and chat panel

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -120,8 +120,9 @@
 
 <script type='text/javascript' src='notePanel.controller.js'> </script>
 <script type='text/javascript' src='notePanel.directive.js'> </script>
-<script type='text/javascript' src='notePanel.service.js'> </script>
 
+<script type='text/javascript' src='chatPanel.controller.js'> </script>
+<script type='text/javascript' src='chatPanel.directive.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
