--- a/public/html/notePanel.html
+++ b/public/html/notePanel.html
@@ -6,7 +6,7 @@
           Quick note
         </div>
         <div class="panel-title pull-right">
-          <a href='' ng-click=''><span class="glyphicon glyphicon-plus"></span></a>
+          <a href='' ng-click='newNote()'><span class="glyphicon glyphicon-plus"></span></a>
           <a href='' ng-click='openNotePanel()'><span class="glyphicon glyphicon-remove"></span></a>
           <!--img src="image/close.png" style="width:20px;height:20px;border:0;"-->
         </div>
