--- a/public/html/index.html
+++ b/public/html/index.html
@@ -124,6 +124,8 @@
 <script type='text/javascript' src='chatPanel.controller.js'> </script>
 <script type='text/javascript' src='chatPanel.directive.js'> </script>
 
+<script type='text/javascript' src='focusOnShow.directive.js'> </script>
+
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
