implement focus on note title input when open quick note panel

--- a/public/html/notePanel.html
+++ b/public/html/notePanel.html
@@ -14,7 +14,7 @@
       </div>
       <div class="panel-body"><form>
         <div class="form-group">
-          <input id='quickNoteTitle' type='text'
+          <input id='quickNoteTitle' type='text' ng-show='showNotePanel' focus-on-show
             ng-model='quickNoteTitle' placeholder=' Note title' autofocus>
           </input>
         </div>
