--- a/public/html/index.html
+++ b/public/html/index.html
@@ -10,12 +10,25 @@
 <script src='all.min.js'></script>
 -->
 
+<!-- checked -->
 <script type='text/javascript' src='app.module.js'></script>
 <script type='text/javascript' src='route.js'> </script>
+
+<script type='text/javascript' src='main.controller.js'> </script>
+<script type='text/javascript' src='mainCarousel.controller.js'> </script>
+
 <script type='text/javascript' src='navBar.directive.js'> </script>
 <script type='text/javascript' src='navBar.controller.js'> </script>
+
 <script type='text/javascript' src='logIn.controller.js'> </script>
+<script type='text/javascript' src='logInCheck.controller.js'> </script>
+
+<script type='text/javascript' src='fbLogInStatus.service.js'> </script>
+<script type='text/javascript' src='fbLogIn.controller.js'> </script>
+
 <script type='text/javascript' src='signUp.controller.js'> </script>
+<!-- checked -->
+
 <script type='text/javascript' src='unSubscribeTestMain.controller.js'> </script>
 <script type='text/javascript' src='unSubscribeTutorialMode.controller.js'> </script>
 <script type='text/javascript' src='testSummaryUnSubscribeUser.controller.js'> </script>
@@ -25,7 +38,7 @@
 <script type='text/javascript' src='testScore.service.js'> </script>
 <script type='text/javascript' src='testSummary.service.js'> </script>
 <script type='text/javascript' src='reviewUnSubscribeTest.service.js'> </script>
-<script type='text/javascript' src='dashboard.controller.js'> </script>
+
 <script type='text/javascript' src='suAccountData.service.js'> </script>
 <script type='text/javascript' src='dashboard.pu.service.js'> </script>
 <script type='text/javascript' src='logOut.controller.js'> </script>
@@ -35,7 +48,7 @@
 <script type='text/javascript' src='answerSummary.service.js'> </script>
 <script type='text/javascript' src='reviseExamAnswerSheet.controller.js'> </script>
 <script type='text/javascript' src='reviseExamAnswerSheet.service.js'> </script>
-<script type='text/javascript' src='main.controller.js'> </script>
+
 <script type='text/javascript' src='testSummaryExamMode.controller.js'> </script>
 <script type='text/javascript' src='examScore.service.js'> </script>
 <script type='text/javascript' src='examSummary.service.js'> </script>
@@ -64,13 +77,13 @@
 <script type='text/javascript' src='accountSettingSu.controller.js'> </script>
 <script type='text/javascript' src='suTestList.controller.js'> </script>
 <script type='text/javascript' src='articleListSu.controller.js'> </script>
-<script type='text/javascript' src='fbLogIn.controller.js'> </script>
+
 <script type='text/javascript' src='preferenceSettingSu.controller.js'> </script>
 <script type='text/javascript' src='preferenceSettingSu.service.js'> </script>
 <script type='text/javascript' src='preferenceSettingSuModal.controller.js'> </script>
-<script type='text/javascript' src='mainCarousel.controller.js'> </script>
-<script type='text/javascript' src='fbLogInStatus.service.js'> </script>
-<script type='text/javascript' src='logInCheck.controller.js'> </script>
+
+
+
 <script type='text/javascript' src='account.admin.controller.js'> </script>
 <script type='text/javascript' src='account.admin.service.js'> </script>
 <script type='text/javascript' src='setting.admin.service.js'> </script>
@@ -144,12 +157,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.slim.js"></script>
 
 <body ng-app='app'>
-
-<!--
-  <script>
-    var socket = io();
-  </script>
--->
 
 <div id="loaderdiv" data-ng-if="loading">
     <img src="image/loading.gif" class="ajax-loader"/>
