--- a/public/html/index.html
+++ b/public/html/index.html
@@ -129,7 +129,7 @@
 <script type='text/javascript' src='secondNavBar.ad.controller.js'> </script>
 <script type='text/javascript' src='secondNavBar.ad.directive.js'> </script>
 
-<script type='text/javascript' src="ng-scroll-glue.js"></script>
+<script type='text/javascript' src='bower_components/ng-scroll-glue/dist/ng-scroll-glue.js'></script>
 
 <script type='text/javascript' src='notePanel.controller.js'> </script>
 <script type='text/javascript' src='notePanel.directive.js'> </script>
@@ -143,7 +143,7 @@
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 <!-- -->
 <!-- social login button -->
