fix index.html, ng-scroll-glue.js

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -129,7 +129,7 @@
 <script type='text/javascript' src='secondNavBar.ad.controller.js'> </script>
 <script type='text/javascript' src='secondNavBar.ad.directive.js'> </script>
 
-<script type='text/javascript' src='bower_components/ng-scroll-glue/dist/ng-scroll-glue.js'></script>
+<script type='text/javascript' src='ng-scroll-glue.js'></script>
 
 <script type='text/javascript' src='notePanel.controller.js'> </script>
 <script type='text/javascript' src='notePanel.directive.js'> </script>
