--- a/public/html/reviewUnSubscribeTest.html
+++ b/public/html/reviewUnSubscribeTest.html
@@ -1,5 +1,7 @@
 <nav-bar></nav-bar>
 
+<div class="container fluid" style="margin-top:120px">
+
 <div class='row'>
 
   <div class="col-sm-1"></div>
@@ -20,4 +22,8 @@
 
 </div>
 
+</div>
+
   <div class="col-sm-1"></div>
+
+</div>
