--- a/public/html/unSubscribeTutorialMode.html
+++ b/public/html/unSubscribeTutorialMode.html
@@ -1,6 +1,7 @@
 <nav-bar> </nav-bar>
 
 <div class="row" style="margin-top:80px">
+  <div class='container'>
 
   <div class="col-sm-1"></div>
 
@@ -15,7 +16,7 @@
     </h3>
 
     <form ng-submit="submitAnswer()" ng-init="formData.answer=null">
-      <div class="col-sm-6">
+      <!-- <div class="col-sm-6"> -->
         <h4>
         <label><input type="radio" ng-model="formData.answer" value="a"> {{choice1}} </label>
         <br>
@@ -26,18 +27,23 @@
         <label><input type="radio" ng-model="formData.answer" value="d"> {{choice4}} </label>
         <br>
         </h4>
+      <div class='row'>
+      <div class="col-sm-4">
       </div>
-      <div class="col-sm-6">
-        <input ng-show="isSubmitted()" type="submit"  class="btn btn-primary" id="submit" value="Submit answer" />
-        <button ng-show="isNext()" type="button" class="btn btn-success" ng-click="nextQuestion()">Next question</button>
-        <button ng-show="isTestFinished()" type="button" class="btn btn-info" ng-click="showTestSummary()">Test is finished. Go to Test summary</button>
-      </div>
+      <div class="col-sm-4">
+        <input ng-show="isSubmitted()" type="submit" class="btn btn-primary btn-block" id="submit" value="Submit answer" />
+        <button ng-show="isNext()" type="button" class="btn btn-success btn-block" ng-click="nextQuestion()">Next question</button>
+        <button ng-show="isTestFinished()" type="button" class="btn btn-info btn-block" ng-click="showTestSummary()">Test is finished. Go to Test summary</button>
+    </div>
+  </div>
+    <div class="col-sm-4">
+    </div>
     </form>
-
   </div>
 
   <div class="col-sm-1"></div>
 
+</div>
 </div>
 
 <hr>
