--- a/public/html/suTestTutorialMode.html
+++ b/public/html/suTestTutorialMode.html
@@ -9,7 +9,7 @@
 </div>
 
 <div class="row" style="margin-top:120px">
-
+  <div class='container'>
 
   <div class="col-sm-1"></div>
 
@@ -24,7 +24,6 @@
     </h3>
 
     <form ng-submit="submitAnswer()" ng-init="formData.answer=null">
-      <div class="col-sm-6">
         <h4>
         <label><input type="radio" ng-model="formData.answer" value="a"> {{choice1}} </label>
         <br>
@@ -35,11 +34,15 @@
         <label><input type="radio" ng-model="formData.answer" value="d"> {{choice4}} </label>
         <br>
         </h4>
+        <div class='row'>
+        <div class="col-sm-4">
+        </div>
+        <div class="col-sm-4">
+        <input ng-show="isSubmitted()" type="submit"  class="btn btn-primary btn-block" id="submit" value="Submit answer" />
+        <button ng-show="isNext()" type="button" class="btn btn-success btn-block" ng-click="nextQuestion()">Next question</button>
+        <button ng-show="isTestFinished()" type="button" class="btn btn-info btn-block" ng-click="suTestSummary()">Test is finished. Go to Test summary</button>
       </div>
-      <div class="col-sm-6">
-        <input ng-show="isSubmitted()" type="submit"  class="btn btn-primary" id="submit" value="Submit answer" />
-        <button ng-show="isNext()" type="button" class="btn btn-success" ng-click="nextQuestion()">Next question</button>
-        <button ng-show="isTestFinished()" type="button" class="btn btn-info" ng-click="suTestSummary()">Test is finished. Go to Test summary</button>
+      <div class="col-sm-4">
       </div>
     </form>
 
@@ -47,6 +50,7 @@
 
   <div class="col-sm-1"></div>
 
+</div>
 </div>
 
 <hr>
