--- a/public/html/suTestTutorialMode.html
+++ b/public/html/suTestTutorialMode.html
@@ -56,6 +56,7 @@
 <hr>
 
 <div class='row'>
+    <div class='container'>
   <div class="col-sm-1"></div>
     <div class="col-sm-10">
     <h2> {{result}} </h2>
@@ -63,6 +64,5 @@
     </div>
 <div class="col-sm-1"></div>
 </div>
-
-
+</div>
 </div>
