--- a/public/html/unSubscribeTutorialMode.html
+++ b/public/html/unSubscribeTutorialMode.html
@@ -44,17 +44,20 @@
   <div class="col-sm-1"></div>
 
 </div>
-</div>
+
 
 <hr>
 
 <div class='row'>
+  <div class='container'>
   <div class="col-sm-1"></div>
     <div class="col-sm-10">
     <h2> {{result}} </h2>
     <h2> {{explanation}} </h2>
     </div>
 <div class="col-sm-1"></div>
+</div>
+
 </div>
 
 </div>
