--- a/public/html/index.html
+++ b/public/html/index.html
@@ -156,6 +156,8 @@
 
 <script type='text/javascript' src='pressEnter.directive.js'> </script>
 
+<script type='text/javascript' src='rfocus.directive.js'> </script>
+
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
