--- a/public/html/index.html
+++ b/public/html/index.html
@@ -163,6 +163,11 @@
 
 <script type='text/javascript' src='rfocus.directive.js'> </script>
 
+
+<script type='text/javascript' src='suNoteList.controller.js'> </script>
+
+
+
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
