--- a/public/html/navBar.su.html
+++ b/public/html/navBar.su.html
@@ -22,7 +22,7 @@
       <li><a href="#!/dashboard/su/{{userID}}">Dashboard</a></li>
       <li><a href="#!/testList/su/{{userID}}">Test list</a></li>
       <li><a href="#!/articleList/su/{{userID}}">Article</a></li>
-      <li><a href="">Note</a></li>
+      <li><a href="#!/noteList/su/{{userID}}">Note</a></li>
       <li><a href="#!/profileSetting/su/{{userID}}"><span class="glyphicon glyphicon-cog"></span>Setting</a></li>
       <li class="dropdown">
                 <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More<span class="caret"></span></a>
