implement retrieve note list from the DB to the view

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -165,6 +165,7 @@
 
 
 <script type='text/javascript' src='suNoteList.controller.js'> </script>
+<script type='text/javascript' src='suNoteList.service.js'> </script>
 
 
 
