--- a/public/html/suNoteList.html
+++ b/public/html/suNoteList.html
@@ -4,7 +4,34 @@
 
 <div class="row" style="margin-top:120px">
 
+<div class='container'>
 
+  <div class="col-sm-1"></div>
 
+  <div class="col-sm-10">
+
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr>
+      <th><h3 style='text-align:center';>Title</h3></th>
+      <th><h3 style='text-align:center';>Date</h3></th>
+      <th><h3 style='text-align:center';>View</h3></th>
+      </tr>
+    </thead>
+      <tbody>
+        <tr ng-repeat="note in noteList">
+          <td style='text-align:center';>{{note.title}}</td>
+          <td style='text-align:center';>{{note.noteTime}}</td>
+          <td><a ng-href="">view</a></td>
+        </tr>
+      </tbody>
+
+    </table>
+
+  </div>
+
+  <div class="col-sm-1"></div>
+
+</div>
 
 </div>
