1st implement on note view; still does not work with $routeParams with space and noteTime to be convert back to int format

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -167,6 +167,9 @@
 <script type='text/javascript' src='suNoteList.controller.js'> </script>
 <script type='text/javascript' src='suNoteList.service.js'> </script>
 
+<script type='text/javascript' src='suNote.controller.js'> </script>
+<script type='text/javascript' src='suNote.service.js'> </script>
+
 
 
 <!-- bootstrap3 -->
