--- a/public/html/suNoteList.html
+++ b/public/html/suNoteList.html
@@ -22,10 +22,9 @@
         <tr ng-repeat="note in noteList">
           <td style='text-align:center';>{{note.title}}</td>
           <td style='text-align:center';>{{note.noteTime}}</td>
-          <td><a ng-href="">view</a></td>
+          <td><a ng-href="#!/suNote/{{note.userID}}/{{note.title}}/note.noteTime">view</a></td>
         </tr>
       </tbody>
-
     </table>
 
   </div>
