--- a/public/html/suNoteList.html
+++ b/public/html/suNoteList.html
@@ -21,8 +21,8 @@
       <tbody>
         <tr ng-repeat="note in noteList">
           <td style='text-align:center';>{{note.title}}</td>
-          <td style='text-align:center';>{{note.noteTime}}</td>
-          <td><a ng-href="#!/suNote/{{note.userID}}/{{note.title}}/note.noteTime">view</a></td>
+          <td style='text-align:center';>{{note.noteTimeText}}</td>
+          <td><a ng-href="#!/suNote/{{note.userID}}/{{note.title}}/{{note.noteTime}}">view</a></td>
         </tr>
       </tbody>
     </table>
