implement view su note

--- a/public/html/suNote.html
+++ b/public/html/suNote.html
@@ -10,6 +10,10 @@
 
   <div class="col-sm-10">
 
+    <h2 style='color: blue'>{{noteTitle}}</h2>
+    <h4>{{noteDate}}</h4>
+    <h3>{{noteContent}}<h3>
+
   </div>
 
   <div class="col-sm-1"></div>
