change noteDate color to grey

--- a/public/html/suNote.html
+++ b/public/html/suNote.html
@@ -11,7 +11,7 @@
   <div class="col-sm-10">
 
     <h2 style='color: blue'>{{noteTitle}}</h2>
-    <h4>{{noteDate}}</h4>
+    <h4 style='color: LightSlateGrey'>{{noteDate}}</h4>
     <h3>{{noteContent}}<h3>
 
   </div>
