--- a/public/html/index.html
+++ b/public/html/index.html
@@ -183,7 +183,7 @@
 <!-- -->
 <link rel = "stylesheet" type = "text/css" href = "css/mep.css"/>
 
-<script src="https://connect.facebook.net/en_US/sdk.js"></script>
+<script src="//connect.facebook.net/en_US/sdk.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.slim.js"></script>
 
