1st implement admin chat with user

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -173,6 +173,10 @@
 <script type='text/javascript' src='suNote.service.js'> </script>
 
 
+<script type='text/javascript' src='chatAdmin.controller.js'> </script>
+<script type='text/javascript' src='chatAdmin.service.js'> </script>
+
+
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
