--- a/public/html/navBar.ad.html
+++ b/public/html/navBar.ad.html
@@ -19,6 +19,8 @@
 
     <ul class="nav navbar-nav" ng-show='isLogIn()'>
       <li><a href="#!/dashboard/ad/{{userID}}">Dashboard</a></li>
+      <li><a href="">User</a></li>
+      <li><a href="#!/chatAdmin/{{userID}}/">Chat</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right" ng-show='!isLogIn()'>
       <li><a href="#!signUp"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
