implement get select userID to chat service

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -177,6 +177,10 @@
 <script type='text/javascript' src='chatAdmin.service.js'> </script>
 
 
+<script type='text/javascript' src='chatIO.service.js'> </script>
+
+<script type='text/javascript' src='adminSelectChat.service.js'> </script>
+
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
