chat starts wo work; still need to fix on separate admin channel to the correct user

--- a/public/html/adminChatPanel.html
+++ b/public/html/adminChatPanel.html
@@ -1,22 +1,22 @@
 <!-- chat panel -->
-<div ng-controller='chatPanelCtrl'>
-  <div class="panel panel-primary" id='chatPanel' ng-show='showChatPanel'>
+<div ng-controller='adminChatPanelCtrl'>
+  <div class="panel panel-primary" id='adminChatPanel' ng-show='showAdminChatPanel'>
     <div class="panel-heading">
       <div class="panel-title pull-left">Chat panel</div>
       <div class="panel-title pull-right">
-        <a href='' ng-click='openChatPanel()'><span class="glyphicon glyphicon-remove"></span></a>
+        <a href='' ng-click='openAdminChatPanel()'><span class="glyphicon glyphicon-remove"></span></a>
       </div>
       <div class="clearfix"></div>
     </div>
-    <div class="panel-body" id='chatPanelBody' scroll-glue>
+    <div class="panel-body" id='adminChatPanelBody' scroll-glue>
       <table class="table table-striped">
         <tr ng-repeat='m in sentMessage track by $index'>
           <td class="break-word">{{m}}</td>
         </tr>
       </table>
     </div>
-    <div id="chatPanel-message">
-      <input id="chatPanel-message-input" type='text' ng-show='showChatPanel' focus-on-show
+    <div id="adminChatPanel-message">
+      <input id="chatPanel-message-input" type='text' ng-show='showAdminChatPanel' focus-on-show
               press-Enter='sendMessage()' ng-model='message'
               placeholder=' Type message here ...'>
       </input>
