1st implement FB share us on default nav bar

--- a/public/html/navBar.html
+++ b/public/html/navBar.html
@@ -30,7 +30,7 @@
                 <ul class="dropdown-menu" id="main-more-dropdown">
                   <li><a href="">About us</a></li>
                   <li><a href="">Contact us</a></li>
-                  <li><a href="">Share us</a></li>
+                  <li><a href="" ng-click='shareUs()'>Share us</a></li>
                 </ul>
       </li>
     </ul>
