--- a/public/html/suTestReview.html
+++ b/public/html/suTestReview.html
@@ -1,5 +1,9 @@
 <nav-bar-su></nav-bar-su>
 
+<second-nav-bar-su></second-nav-bar-su>
+
+<!--
+
 <div class="navbar navbar-default navbar-fixed-top second-navbar">
     <p class="navbar-text"> {{suTestID}} Test review </p>
 
@@ -8,26 +12,39 @@
     </ul>
 </div>
 
+-->
+
 <div class="row" style="margin-top:120px">
 
-    <div class="col-sm-1"></div>
+  <div class="col-sm-1"></div>
 
-    <div class="col-sm-10">
+  <div class="col-sm-10">
 
-  <h1> Review Soluton </h1>
+    <h1> Review Soluton </h1>
 
-  <h2> {{suTestReview.question}} </h2>
+    <h2> {{suTestReview.question}} </h2>
 
-  <h2> {{suTestReview.solution}} </h2>
+    <h2> {{suTestReview.solution}} </h2>
 
-  <h2> {{suTestReview.explanation}} </h2>
+    <h2> {{suTestReview.explanation}} </h2>
 
-  <button type="button" class="btn btn-primary" ng-click='suTestSummary()'>Test summary</button>
+  </div>
 
+  <div class="col-sm-1"></div>
 
-</div>
+  <hr>
 
-    <div class="col-sm-1"></div>
+  <div class="col-sm-2"></div>
 
+  <div class="col-sm-8">
+    <div class="col-sm-6">
+      <button type="button" class="btn btn-primary" ng-click='suTestSummary()'>Test summary</button>
+    </div>
+    <div class="col-sm-6">
+      <button type="button" class="btn btn-primary" ng-click=''>Write comment</button>
+    </div>
+  </div>
+
+    <div class="col-sm-2"></div>
 
 </div>
