--- a/public/html/suTestReview.html
+++ b/public/html/suTestReview.html
@@ -20,7 +20,7 @@
 
   <div class="col-sm-10">
 
-    <h1> Review Soluton </h1>
+    <h1 style='color:blue';> Review Soluton </h1>
 
     <h2> {{suTestReview.question}} </h2>
 
@@ -32,16 +32,16 @@
 
   <div class="col-sm-1"></div>
 
-  <hr>
-
   <div class="col-sm-2"></div>
 
   <div class="col-sm-8">
     <div class="col-sm-6">
-      <button type="button" class="btn btn-primary" ng-click='suTestSummary()'>Test summary</button>
+      <hr>
+      <button type="button" class="btn btn-primary btn-block" ng-click='suTestSummary()'>Test summary</button>
     </div>
     <div class="col-sm-6">
-      <button type="button" class="btn btn-primary" ng-click=''>Write comment</button>
+      <hr>
+      <button type="button" class="btn btn-info btn-block" ng-click=''>Write comment</button>
     </div>
   </div>
 
