--- a/public/html/suTestReview.html
+++ b/public/html/suTestReview.html
@@ -2,23 +2,13 @@
 
 <second-nav-bar-su></second-nav-bar-su>
 
-<!--
-
-<div class="navbar navbar-default navbar-fixed-top second-navbar">
-    <p class="navbar-text"> {{suTestID}} Test review </p>
-
-    <ul class="nav navbar-nav pull-right">
-      <li><a href=""><img src="image/chat-icon.png" style="width:25px;height:25px;border:0;"></a></li>
-    </ul>
-</div>
-
--->
-
 <div class="row" style="margin-top:120px">
 
   <div class="col-sm-1"></div>
 
   <div class="col-sm-10">
+
+    <div class="col-sm-10">
 
     <h1 style='color:blue';> Review Soluton </h1>
 
@@ -30,21 +20,48 @@
 
   </div>
 
+  <div class="col-sm-2">
+    <br>
+      <button type="button" class="btn btn-primary btn-block" ng-click='suTestSummary()'>Test summary</button>
+  </div>
+
+  </div>
+
   <div class="col-sm-1"></div>
+
 
   <div class="col-sm-2"></div>
 
   <div class="col-sm-8">
-    <div class="col-sm-6">
+    <div class="col-sm-4"></div>
+    <div class="col-sm-4">
       <hr>
-      <button type="button" class="btn btn-primary btn-block" ng-click='suTestSummary()'>Test summary</button>
+      <button type="button" class="btn btn-info btn-block" ng-click='suTestComment()'>Write comment</button>
     </div>
-    <div class="col-sm-6">
-      <hr>
-      <button type="button" class="btn btn-info btn-block" ng-click=''>Write comment</button>
-    </div>
+    <div class="col-sm-4"></div>
   </div>
 
-    <div class="col-sm-2"></div>
+  <div class="col-sm-2"></div>
+
+
+  <div class="col-sm-3"></div>
+
+      <div class="col-sm-6">
+
+        <br>
+
+        <form ng-submit="logInSubmit()">
+          <textarea  style='font-size: 18px;' rows="10" cols="50">
+
+          </textarea>
+          </textarea>
+        </form>
+
+
+
+      </div>
+
+    <div class="col-sm-3"></div>
+
 
 </div>
