make the textarea comment fill the division width

--- a/public/html/suTestReview.html
+++ b/public/html/suTestReview.html
@@ -51,7 +51,7 @@
         <br>
 
         <form ng-submit="logInSubmit()">
-          <textarea  style='font-size: 18px;' rows="10" cols="50">
+          <textarea  style='font-size: 18px; width: 100%;' rows="10">
 
           </textarea>
           </textarea>
