--- a/public/html/suTestReview.html
+++ b/public/html/suTestReview.html
@@ -36,7 +36,14 @@
     <div class="col-sm-4"></div>
     <div class="col-sm-4">
       <hr>
-      <button type="button" class="btn btn-info btn-block" ng-click='suTestComment()'>Write comment</button>
+      <button type="button" class="btn btn-info btn-block"
+        ng-show='!commentTextArea'
+        ng-click='showCommentTextArea()'>Write comment
+      </button>
+      <button type="button" class="btn btn-success btn-block"
+        ng-show='commentTextArea'
+        ng-click='sendComment()'>Send comment
+      </button>
     </div>
     <div class="col-sm-4"></div>
   </div>
@@ -50,9 +57,9 @@
 
         <br>
 
-        <form ng-submit="logInSubmit()">
-          <textarea  style='font-size: 18px; width: 100%;' rows="10">
-
+        <form ng-model='suTestComment'>
+          <textarea  ng-show='commentTextArea' focus-on-show
+            style='font-size: 18px; width: 100%;' rows="10">
           </textarea>
           </textarea>
         </form>
