implement su test comment

--- a/public/html/suTestReview.html
+++ b/public/html/suTestReview.html
@@ -57,8 +57,9 @@
 
         <br>
 
-        <form ng-model='suTestComment'>
+        <form>
           <textarea  ng-show='commentTextArea' focus-on-show
+            ng-model='suTestComment'
             style='font-size: 18px; width: 100%;' rows="10">
           </textarea>
           </textarea>
