--- a/public/html/suNoteList.html
+++ b/public/html/suNoteList.html
@@ -16,6 +16,7 @@
       <th><h3 style='text-align:center';>Title</h3></th>
       <th><h3 style='text-align:center';>Date</h3></th>
       <th><h3 style='text-align:center';>View</h3></th>
+      <th><h3 style='text-align:center';>Delete</h3></th>
       </tr>
     </thead>
       <tbody>
