--- a/public/html/suNote.html
+++ b/public/html/suNote.html
@@ -6,6 +6,26 @@
 
 <div class='container'>
 
+  <div class='container'>
+    <div class='row'>
+      <div class="col-sm-1">
+      </div>
+      <div class="col-sm-7">
+      </div>
+      <div class="col-sm-1">
+      </div>
+      <div class="col-sm-1">
+        <button type="button" class="btn btn-info btn-block" ng-click='editNote()'>Edit</button>
+      </div>
+      <div class="col-sm-1">
+        <button type="button" class="btn btn-danger" ng-click='deleteNote()'>Delete</button>
+      </div>
+      <div class="col-sm-1">
+      </div>
+    </div>
+  </div>
+
+
   <div class="col-sm-1"></div>
 
   <div class="col-sm-10">
