implement edit su note

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -203,6 +203,9 @@
 
 <script type='text/javascript' src='chatIO.service.js'> </script>
 
+<script type='text/javascript' src='editSuNote.controller.js'> </script>
+
+
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
