--- a/public/html/notePanel.html
+++ b/public/html/notePanel.html
@@ -12,23 +12,24 @@
         </div>
         <div class="clearfix"></div>
       </div>
-      <div class="panel-body"><form>
-        <div class="form-group">
-          <input id='quickNoteTitle' type='text' ng-show='showNotePanel'
-            focus-on-show rfocus='NoteTitle'
-            ng-model="title" placeholder=' Note title'
-            ng-change='saveNote()'
-            ng-model-options="{ updateOn: 'default blur', debounce: {'default': 5000, 'blur': 0} }">
-          </input>
-        </div>
-    <div class="form-group">
-        <textarea id='quickNoteNote' class="form-control" rows='9' column='50'
-          ng-model="note"
-          ng-change='saveNote()'
-          ng-model-options="{ updateOn: 'default blur', debounce: {'default': 5000, 'blur': 0} }">
-        </textarea>
-    </div>
-      </form>
-    </div>
+      <div class="panel-body">
+        <form>
+          <div class="form-group">
+            <input id='quickNoteTitle' type='text' ng-show='showNotePanel'
+              focus-on-show rfocus='NoteTitle'
+              ng-model="title" placeholder=' Note title'
+              ng-change='saveNote()'
+              ng-model-options="{ updateOn: 'default blur', debounce: {'default': 5000, 'blur': 0} }">
+            </input>
+          </div>
+          <div class="form-group">
+            <textarea id='quickNoteNote' class="form-control" rows='9' column='50'
+              ng-model="note"
+              ng-change='saveNote()'
+              ng-model-options="{ updateOn: 'default blur', debounce: {'default': 5000, 'blur': 0} }">
+            </textarea>
+          </div>
+        </form>
+      </div>
   </div>
 </div>
