--- a/public/html/editSuNote.html
+++ b/public/html/editSuNote.html
@@ -11,15 +11,14 @@
   <form>
     <div class="form-group">
       <input id='noteTitle' type='text' size='30' style='font-size:24px; color: blue;';
-             ng-value = title>
+             ng-show='showEditSuNote' focus-on-show
+             ng-model='title' value={{title}}>
 
       </input>
     </div>
     <div class="form-group">
       <textarea id='noteNote' class="form-control" rows='20' column='50'
-        style='font-size:20px; text-align: left;'>
-        {{note}}
-      </textarea>
+        style='font-size:20px; text-align: justify;'>{{note}}</textarea>
     </div>
   </form>
 
