edit su note function

--- a/public/html/editSuNote.html
+++ b/public/html/editSuNote.html
@@ -10,15 +10,20 @@
 
   <form>
     <div class="form-group">
+      <label for='noteTitle' style='font-size:24px;'>Title: </label>
       <input id='noteTitle' type='text' size='30' style='font-size:24px; color: blue;';
              ng-show='showEditSuNote' focus-on-show
-             ng-model='title' value={{title}}>
-
+             ng-model='title' value={{title}}
+             ng-change='saveNote()'
+             ng-model-options="{ updateOn: 'default blur', debounce: {'default': 5000, 'blur': 0} }">
       </input>
     </div>
     <div class="form-group">
       <textarea id='noteNote' class="form-control" rows='20' column='50'
-        style='font-size:20px; text-align: justify;'>{{note}}</textarea>
+        style='font-size:20px; text-align: justify;'
+        ng-model='note'
+        ng-change='saveNote()'
+        ng-model-options="{ updateOn: 'default blur', debounce: {'default': 5000, 'blur': 0} }">{{note}}</textarea>
     </div>
   </form>
 
