--- a/public/html/editSuNote.html
+++ b/public/html/editSuNote.html
@@ -11,7 +11,8 @@
   <form>
     <div class="form-group">
       <label for='noteTitle' style='font-size:24px;'>Title: </label>
-      <input id='noteTitle' type='text' size='30' style='font-size:24px; color: blue;';
+      <input id='noteTitle' type='text' size='30' maxlength="30"
+             style='font-size:24px; color: blue;';
              ng-model='title' value={{title}}
              ng-change='saveNote()'
              ng-model-options="{ updateOn: 'default blur', debounce: {'default': 5000, 'blur': 0} }">
