fix modal behind the nav bar

--- a/public/html/preferenceSettingSuModal.html
+++ b/public/html/preferenceSettingSuModal.html
@@ -1,4 +1,4 @@
-<div class="modal-demo" style="margin-top:40px">
+<div class="modal-demo"><!--style="margin-top:40px"-->
 
         <div class="modal-header">
             <h3 class="modal-title" id="modal-title">Preference setting</h3>
