implement test comment for unsubscriber test

--- a/public/html/unSubscribeTutorialMode.html
+++ b/public/html/unSubscribeTutorialMode.html
@@ -33,7 +33,7 @@
       <div class="col-sm-4">
         <input ng-show="isSubmitted()" type="submit" class="btn btn-primary btn-block" id="submit" value="Submit answer" />
         <button ng-show="isNext()" type="button" class="btn btn-success btn-block" ng-click="nextQuestion()">Next question</button>
-        <button ng-show="isTestFinished()" type="button" class="btn btn-info btn-block" ng-click="showTestSummary()">Test is finished. Go to Test summary</button>
+        <button ng-show="isTestFinished()" type="button" class="btn btn-info btn-block" ng-click="showTestSummary()">Finish the test</button>
     </div>
   </div>
     <div class="col-sm-4">
@@ -44,7 +44,6 @@
   <div class="col-sm-1"></div>
 
 </div>
-
 
 <hr>
 
