--- a/public/html/reviewUnSubscribeTest.html
+++ b/public/html/reviewUnSubscribeTest.html
@@ -8,22 +8,67 @@
 
   <div class="col-sm-10">
 
-<h1> Review Soluton </h1>
+    <div class="col-sm-10">
 
-<h2> {{questionNumber}} </h2>
+      <h1> Review Soluton </h1>
 
-<h2> {{question}} </h2>
+      <h2> {{questionNumber}} </h2>
 
-<h2> {{solution}} </h2>
+      <h2> {{question}} </h2>
 
-<h2> {{explanation}} </h2>
+      <h2> {{solution}} </h2>
 
-<button type="button" class="btn btn-primary" ng-click='routeToTestSummaryUnSubscribeUser()'>Test summary</button>
+      <h2> {{explanation}} </h2>
+    </div>
+    <div class="col-sm-2">
 
-</div>
+      <button type="button" class="btn btn-primary" ng-click='routeToTestSummaryUnSubscribeUser()'>Test summary</button>
+    </div>
 
-</div>
+  </div>
 
   <div class="col-sm-1"></div>
+
+</div>
+
+
+  <div class="col-sm-2"></div>
+
+  <div class="col-sm-8">
+    <div class="col-sm-4"></div>
+    <div class="col-sm-4">
+      <hr>
+      <button type="button" class="btn btn-info btn-block"
+        ng-show='!commentTextArea'
+        ng-click='showCommentTextArea()'>Write comment
+      </button>
+      <button type="button" class="btn btn-success btn-block"
+        ng-show='commentTextArea'
+        ng-click='sendComment()'>Send comment
+      </button>
+    </div>
+    <div class="col-sm-4"></div>
+  </div>
+
+  <div class="col-sm-2"></div>
+
+
+  <div class="col-sm-3"></div>
+
+      <div class="col-sm-6">
+
+        <br>
+
+        <form>
+          <textarea  ng-show='commentTextArea' focus-on-show
+            ng-model='testComment'
+            style='font-size: 18px; width: 100%;' rows="10">
+          </textarea>
+          </textarea>
+        </form>
+
+      </div>
+
+    <div class="col-sm-3"></div>
 
 </div>
