--- a/public/html/suTestTutorialMode.html
+++ b/public/html/suTestTutorialMode.html
@@ -40,7 +40,9 @@
         <div class="col-sm-4">
         <input ng-show="isSubmitted()" type="submit"  class="btn btn-primary btn-block" id="submit" value="Submit answer" />
         <button ng-show="isNext()" type="button" class="btn btn-success btn-block" ng-click="nextQuestion()">Next question</button>
-        <button ng-show="isTestFinished()" type="button" class="btn btn-info btn-block" ng-click="suTestSummary()">Test is finished. Go to Test summary</button>
+        <button ng-show="isTestFinished()" type="button" class="btn btn-info btn-block" ng-click="suTestSummary()">
+          Finish the test
+        </button>
       </div>
       <div class="col-sm-4">
       </div>
