refactor admin dashboard user list

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -219,18 +219,12 @@
 <script type='text/javascript' src='ng-scroll-glue.js'></script>
 
 
-
-
-
-
-
-
 <script type='text/javascript' src='chatAdmin.controller.js'> </script>
 <script type='text/javascript' src='chatAdmin.service.js'> </script>
 
 <script type='text/javascript' src='chatIO.service.js'> </script>
 
-
+<script type='text/javascript' src='userList.service.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
