implement user list function for admin

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -183,7 +183,6 @@
 <script type='text/javascript' src='navBar.ad.directive.js'> </script>
 <script type='text/javascript' src='navBar.ad.controller.js'> </script>
 <script type='text/javascript' src='dashboard.ad.controller.js'> </script>
-<script type='text/javascript' src='dashboard.ad.service.js'> </script>
 
 
 
@@ -225,6 +224,8 @@
 <script type='text/javascript' src='chatIO.service.js'> </script>
 
 <script type='text/javascript' src='userList.service.js'> </script>
+
+<script type='text/javascript' src='adminUserList.controller.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
