--- a/public/html/dashboard.ad.html
+++ b/public/html/dashboard.ad.html
@@ -7,7 +7,10 @@
 
   <div class="col-sm-10">
 
-    <table class="table table-striped table-hover">
+    <h1>User visit: </h1>
+    <h1>Subscribed yser log in: </h1>
+
+    <!--table class="table table-striped table-hover">
       <thead>
         <tr>
           <th>user name</th>
@@ -25,7 +28,7 @@
         </tr>
       </tbody>
     </table>
-  </div>
+  </div-->
 
 <div class="col-sm-1"></div>
 </div>
