--- a/public/html/dashboard.ad.html
+++ b/public/html/dashboard.ad.html
@@ -8,7 +8,7 @@
   <div class="col-sm-10">
 
     <h1>User visit: </h1>
-    <h1>Subscribed yser log in: </h1>
+    <h1>Subscribed user log in: </h1>
 
     <!--table class="table table-striped table-hover">
       <thead>
